--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-pell-rich-editor",
-  "description": "React Native Rich Editor",
-  "version": "1.0.4",
+  "name": "@neocoast/react-native-pell-rich-editor",
+  "description": "React Native Rich Editor - NeoCoast's fork",
+  "version": "0.0.1",
   "main": "index.js",
   "author": {
     "name": "stulip",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/stulip/react-native-pell-rich-editor.git"
+    "url": "https://github.com/NeoCoast/react-native-pell-rich-editor.git"
   },
   "dependencies": {
 
